added new package dependencies, in particular requirement of S4Vectors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,7 @@ Imports:
     dplyr,
     readr,
     refGenome,
-    GenomicRanges
+    GenomicRanges,
+    S4Vectors,
+    IRanges
 RoxygenNote: 7.0.2
