add commonly used IRanges/GenomicRanges/pipe functions to imports - remove package prefixes to these these functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,14 @@
 export(annotate_junc_ref)
 export(merge_junc)
 import(S4Vectors)
+importFrom(GenomicRanges,"end<-")
+importFrom(GenomicRanges,"start<-")
+importFrom(GenomicRanges,"strand<-")
+importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,end)
+importFrom(GenomicRanges,findOverlaps)
+importFrom(GenomicRanges,seqnames)
+importFrom(GenomicRanges,start)
+importFrom(GenomicRanges,strand)
+importFrom(IRanges,CharacterList)
+importFrom(magrittr,"%>%")
