--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ License: What license it uses
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    tibble
 Imports: 
     stringr,
     dplyr,
