--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     testthat (>= 2.1.0),
-    tibble
+    tibble,
+    knitr,
+    rmarkdown
 Imports: 
     stringr,
     dplyr,
@@ -22,3 +24,4 @@ Imports:
     S4Vectors,
     IRanges
 RoxygenNote: 7.0.2
+VignetteBuilder: knitr
