--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,16 @@
 Package: dasper
-Title: Detecting abberant splicing events from RNA-sequencing data
+Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "David",
-           family = "Zhang",
+    person(given = "First",
+           family = "Last",
            role = c("aut", "cre"),
-           email = "david.zhang@ucl.ac.uk")
+           email = "first.last@example.com",
+           comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: `use_mit_license()`, `use_gpl3_license()` or friends to
+    pick a license
 Encoding: UTF-8
 LazyData: true
-Suggests: 
-    testthat (>= 2.1.0),
-    tibble,
-    knitr,
-    rmarkdown
-Imports: 
-    stringr,
-    dplyr,
-    readr,
-    refGenome,
-    GenomicRanges,
-    S4Vectors,
-    IRanges
-RoxygenNote: 7.0.2
-VignetteBuilder: knitr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
