--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,28 @@
 Package: dasper
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Detecting abberant splicing events from RNA-sequencing data
+Version: 0.99.0
+Date: 2020-07-03
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "David",
+           family = "Zhang",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           email = "david.zhang@ucl.ac.uk",
+           comment = c(ORCID = "0000-0003-2382-8460"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: Artistic-2.0
+URL: https://github.com//dzhang32/dasper
+BugReports: https://support.bioconductor.org/t/dasper
+biocViews: Software
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat,
+    covr,
+    knitr,
+    BiocStyle,
+    knitcitations,
+    sessioninfo,
+    rmarkdown
+VignetteBuilder: knitr
