--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,3 +29,14 @@ Suggests:
     sessioninfo,
     rmarkdown
 VignetteBuilder: knitr
+Imports: 
+    stringr,
+    dplyr,
+    readr,
+    GenomicRanges,
+    S4Vectors,
+    IRanges,
+    magrittr,
+    SummarizedExperiment
+Depends: 
+    R (>= 2.10)
