Documentation updates to comply with devtools::check(). Includes documentation of example_juncs.R, dasper itself in dasper-package.R and other functions associated with junc_load()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Suggests:
     BiocStyle,
     knitcitations,
     sessioninfo,
-    rmarkdown
+    rmarkdown,
+    tibble
 VignetteBuilder: knitr
 Imports: 
     stringr,
