Minor fixes to documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: The aim of dasper is to detect aberrant splicing events
   controls, dasper will score each splicing event in the patient with an anomaly 
   score representing the degree to which that splicing event looks abnormal.
 License: Artistic-2.0
-URL: https://github.com//dzhang32/dasper
+URL: https://github.com/dzhang32/dasper
 BugReports: https://support.bioconductor.org/t/dasper
 biocViews: Software
 Encoding: UTF-8
