Change junc_ -> junction_ and juncs to junctions. Add skeleton of .junction_add_controls()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     S4Vectors,
     IRanges,
     magrittr,
-    SummarizedExperiment
+    SummarizedExperiment,
+    utils
 Depends: 
     R (>= 2.10)
