--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     IRanges,
     magrittr,
     SummarizedExperiment,
-    utils
+    utils, 
+    BiocFileCache
 Depends: 
     R (>= 2.10)
