junction_annot() and associated internal functions - refactored documentation and code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,10 @@ Imports:
     IRanges,
     magrittr,
     SummarizedExperiment,
-    utils, 
-    BiocFileCache
+    utils,
+    BiocFileCache,
+    methods,
+    GenomeInfoDb,
+    GenomicFeatures
 Depends: 
     R (>= 2.10)
