junction_score() - add function with testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(junction_annot)
 export(junction_filter)
 export(junction_load)
 export(junction_norm)
+export(junction_score)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
@@ -16,4 +17,7 @@ importFrom(GenomicRanges,start)
 importFrom(GenomicRanges,strand)
 importFrom(GenomicRanges,width)
 importFrom(IRanges,CharacterList)
+importFrom(SummarizedExperiment,"assays<-")
+importFrom(SummarizedExperiment,assays)
+importFrom(SummarizedExperiment,colData)
 importFrom(magrittr,"%>%")
