Documentation + refactoring for BioCheck
Minor syntax updates such as 1:X -> seq_along() or T -> TRUE. Add biocViews. Documentation updates.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(IRanges,CharacterList)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
+importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
