--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,17 @@ Authors@R:
            email = "david.zhang@ucl.ac.uk",
            comment = c(ORCID = "0000-0003-2382-8460"))
 Description: The aim of dasper is to detect aberrant splicing events 
-  from RNA-seq data. By comparing patient RNA-seq data to a set of user-defined 
-  controls, dasper will score each splicing event in the patient with an anomaly 
-  score representing the degree to which that splicing event looks abnormal.
+  from RNA-seq data. dasper will use as input both junction and 
+  coverage data from RNA-seq to calculate the deviation of each 
+  splicing event in a patient from a set of user-defined controls. 
+  dasper uses an unsupervised outlier detection algorithm to score each 
+  splicing event in the patient with an outlier score representing 
+  the degree to which that splicing event looks abnormal.
 License: Artistic-2.0
 URL: https://github.com/dzhang32/dasper
 BugReports: https://support.bioconductor.org/t/dasper
-biocViews: Software
+biocViews: Software, RNASeq, Transcriptomics, AlternativeSplicing, 
+  Coverage
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
