junction_cov_norm() - add with testing
add function to load and normalise coverage across exonic/intronic regions associated a junction.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Imports:
     BiocFileCache,
     methods,
     GenomeInfoDb,
-    GenomicFeatures
+    GenomicFeatures,
+    plyranges
 Depends: 
     R (>= 2.10)
