junction_cov_norm() - add norm_const
Add constant to add to the coverage to use to normalise to to avoid Inf/NaN values.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Suggests:
     sessioninfo,
     rmarkdown,
     tibble,
-    knitcitations
+    knitcitations,
+    rtracklayer
 VignetteBuilder: knitr
 Imports: 
     stringr,
