junction_cov_score() - add with testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(junction_annot)
 export(junction_cov_norm)
+export(junction_cov_score)
 export(junction_filter)
 export(junction_load)
 export(junction_norm)
