junction_process() - add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(junction_annot)
 export(junction_filter)
 export(junction_load)
 export(junction_norm)
+export(junction_process)
 export(junction_score)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
