Tidying for BiocCheck
T/F -> TRUE/FALSE. class() -> is(). Add obj <- NULL for tidy evaluation. Minor syntax/documentation updates.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
