--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ License: Artistic-2.0
 URL: https://github.com/dzhang32/dasper
 BugReports: https://support.bioconductor.org/t/dasper
 biocViews: Software, RNASeq, Transcriptomics, AlternativeSplicing, 
-  Coverage
+  Coverage, Sequencing
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
