junction_outlier_score() - add with testing
Includes adding interface to python via reticulate.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Imports:
     methods,
     GenomeInfoDb,
     GenomicFeatures,
-    plyranges
+    plyranges, 
+    reticulate
 Depends: 
     R (>= 2.10)
