.outlier_detect() - update name, documentation and testing
Update the name from .junction_outlier_score() to .outlier_detect(). Update documentation. Try skipping explicitly setting python3 path for windows.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(junction_load)
 export(junction_norm)
 export(junction_process)
 export(junction_score)
+export(outlier_aggregate)
+export(outlier_detect)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
