--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(junction_load)
 export(junction_norm)
 export(junction_process)
 export(junction_score)
+export(outlier_aggregate)
 export(outlier_detect)
+export(outlier_process)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
