.coverage_load() - add parallelisation
Add argument to permit parallelisation via BiocParallel

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ Imports:
     GenomicFeatures,
     plyranges,
     reticulate,
-    tidyr
+    tidyr,
+    BiocParallel
 Depends: 
     R (>= 2.10)
