--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(IRanges,CharacterList)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
+importFrom(data.table,":=")
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
