plot_sashimi() - add function to plot splicing in the form of a sashimi plot with testing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,11 @@ Suggests:
     rmarkdown,
     tibble,
     knitcitations,
-    rtracklayer
+    rtracklayer,
+    ggplot2,
+    ggpubr,
+    grid,
+    ggrepel
 VignetteBuilder: knitr
 Imports: 
     stringr,
