--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(junction_score)
 export(outlier_aggregate)
 export(outlier_detect)
 export(outlier_process)
+export(sashimi_plot)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
