--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(junction_score)
 export(outlier_aggregate)
 export(outlier_detect)
 export(outlier_process)
-export(sashimi_plot)
+export(plot_sashimi)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
