--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,7 @@ Imports:
     reticulate,
     tidyr,
     BiocParallel,
-    data.table
+    data.table,
+    megadepth
 Depends: 
     R (>= 2.10)
