--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,6 @@ Imports:
     reticulate,
     tidyr,
     BiocParallel,
-    data.table,
-    megadepth
+    data.table
 Depends: 
     R (>= 2.10)
