use rowRanges from matrixStats instead of SummarizedExperiment
- trying to solve https://github.com/dzhang32/dasper/runs/1198046360

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,4 +31,5 @@ importFrom(SummarizedExperiment,colData)
 importFrom(data.table,":=")
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
+importFrom(matrixStats,rowRanges)
 importFrom(methods,is)
