Forgot to update NAMESPACE for importing rowRanges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,8 +28,8 @@ importFrom(IRanges,CharacterList)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowRanges)
 importFrom(data.table,":=")
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
-importFrom(matrixStats,rowRanges)
 importFrom(methods,is)
