Forgot to run devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(data.table,":=")
+importFrom(data.table,.SD)
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
