--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.99.0
 Date: 2020-07-03
 Authors@R: c(person(given = "David", family = "Zhang", 
     role = c("aut", "cre"),
-    email = "dyzhang32@gmail.com",
+    email = "david.zhang.12@ucl.ac.uk",
     comment = c(ORCID = "0000-0003-2382-8460")), 
     person(given = "Leonardo", family = "Collado-Torres",
     role = c("ctb"),
@@ -62,4 +62,4 @@ Imports:
     data.table,
     megadepth
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0)
