Add GenomicState as Suggests for use in testing/examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests:
     ggpubr,
     grid,
     ggrepel,
-    recount
+    recount,
+    GenomicState
 VignetteBuilder: knitr
 Imports: 
     stringr,
