Configuration for basilisk
- Add .BBSoptions for Windows 32 exemption
- Add configure files
- Remove reticulate .onLoad

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,13 @@ importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(basilisk,BasiliskEnvironment)
+importFrom(basilisk,basiliskRun)
+importFrom(basilisk,basiliskStart)
+importFrom(basilisk,basiliskStop)
 importFrom(data.table,":=")
 importFrom(data.table,.SD)
 importFrom(dplyr,count)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
+importFrom(reticulate,import)
