--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,8 @@ Suggests:
     covr,
     GenomicState,
     knitr,
+    lifecycle,
     recount,
-    refGenome,
     RefManageR,
     rmarkdown,
     rtracklayer,
