add option to use rtracklayer in .coverage_load

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,6 +60,7 @@ Imports:
     plyranges, 
     readr,
     reticulate, 
+    rtracklayer,
     S4Vectors,
     stringr, 
     SummarizedExperiment,
