--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(outlier_aggregate)
 export(outlier_detect)
 export(outlier_process)
 export(plot_sashimi)
+export(ref_load)
 import(S4Vectors)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
