--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dasper
 Title: Detecting abberant splicing events from RNA-sequencing data
-Version: 1.3.4
+Version: 1.3.5
 Date: 2021-08-05
 Authors@R: c(person(given = "David", family = "Zhang", 
     role = c("aut", "cre"),
@@ -32,6 +32,7 @@ Suggests:
     GenomicState,
     knitr,
     lifecycle,
+    markdown,
     recount,
     RefManageR,
     rmarkdown,
