--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dasper
 Title: Detecting abberant splicing events from RNA-sequencing data
-Version: 1.3.5
+Version: 1.3.6
 Date: 2021-08-05
 Authors@R: c(person(given = "David", family = "Zhang", 
     role = c("aut", "cre"),
@@ -27,8 +27,10 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    AnnotationFilter,
     BiocStyle,
     covr,
+    ensembldb,
     GenomicState,
     knitr,
     lifecycle,
